[package]
name = "minecraft-net"
version = "0.2.0"
edition = "2021"
authors = ["Schatten2020"]
description = "A library allowing easier communication via the minecraft protocol"
categories = ["network-programming", "game-development"]
license-file = "LICENSE"
repository = "https://github.com/Schatten2021/rust-minecraft-net.git"

[dependencies]
flate2 = { version = "1.0.35", features = ["zlib"], default-features = false }
openssl = "0.10.68"
rand = "0.9.0-beta.0"
bytes = "1.8.0"
minecraft-net-proc = { version = "0.2.0", path = "../minecraft-net-proc" }
cesu8 = "1.1.0"